# LongitudeTZ

./: README.md
.github/workflows/: test-perl.yml  test-python.yml
data/: solar-tz.tab
docs/: 2025-12-01-ltz-project-update.md  README.md  _config.yml  cli-notes.md  cli-spec.md  longitude-timezones.tzfile  questions-answers.md  solar_tz_definition.md  why-solar-tz.md
src/: gen-ltz.pl  gen_lon_tz.py
src/perl/: .gitignore  Changes  README.md  cpanfile  dist.ini
src/python/: README.md  gen_lon_tz.py  pyproject.toml  requirements.txt
src/python/scripts/: gen_lon_tz.py  lon_tz.py
src/python/src/timezone_solar/: requirements.txt  tzsconst.py
src/python/src/timezone_solar/test/: run_tests.py  test_010_tzsconst.py
src/python/src/timezone_solar/tests/: __main__.py  test_010_tzsconst.py  test_012_latitude.py
src/python/timezone_solar/: README.md  __init__.py  pyproject.toml  timezone_solar.py  tzsconst.py
src/python/timezone_solar/scripts/: gen_lon_tz.py
src/python/timezone_solar/test/: __init__.py  __main__.py  run_tests.py  test_010_tzsconst.py  test_011_basic.py  test_012_latitude.py  test_013_datetime.py  test_basic.py  test_latitude.py  test_timezone_solar.py  test_tzsconst.py  utils.py
src/python/timezone_solar/tests/: run_tests.py  test_010_tzsconst.py  test_011_basic.py  test_012_latitude.py  test_013_datetime.py  test_014_accessors.py  utils.py
test/: README.md  cli-test-cpp-boost.t  cli-test-cpp.t  cli-test-perl.t  cli-test-python.t  cli-test.pl  perlcritic.rc  perltidy.rc
tools/: changes2version.pl
tools/map-image/: .gitignore  Makefile  (+4 more)
(+34 files in other folders)
