[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "timezone_solar"
authors = [
    { name = "Ian Kluft", email="ko6yq.dev+python@gmail.com" }
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Localization"
]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Home = "https://github.com/ikluft/LongitudeTZ"
Source = "https://github.com/ikluft/LongitudeTZ/tree/main/src/python"
Bug_Tracker = "https://github.com/ikluft/LongitudeTZ/labels/Python"
