[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "timezone_solar"
authors = [{name = "Ian Kluft"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Home = "https://github.com/ikluft/LongitudeTZ"
Bug_Tracker = "https://github.com/ikluft/LongitudeTZ/labels/Python"
